Implementación del SEO

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,33 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>MauricioVereau</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Desarrollador Web">
+  <meta name="keywords"
+    content="Mauricio Vereau, Portafolio, Fullstack Developer, Angular, .NET, SQL Server, Software Developer, Perú">
+  <meta name="author" content="Mauricio Vereau">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://mauriciovereau.dev">
+  <meta name="language" content="Spanish">
+
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="es_ES">
+  <meta property="og:title" content="Mauricio Vereau | Desarrollador Fullstack">
+  <meta property="og:description"
+    content="Mauricio Vereau, Portafolio, Fullstack Developer, Angular, .NET, SQL Server, Software Developer, Perú">
+  <meta property="og:url" content="https://mauriciovereau.dev">
+  <meta property="og:site_name" content="Mauricio Vereau">
+  <meta property="og:image" content="assets/img/mv-dev.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script>
     // Aplicar tema antes de que Angular se monte para evitar parpadeo
-    (function() {
+    (function () {
       const savedTheme = localStorage.getItem('theme');
       if (savedTheme === 'dark') {
         document.documentElement.classList.add('dark');
@@ -21,9 +40,11 @@
     })();
   </script>
 </head>
+
 <body>
   <app-root></app-root>
 
   <script src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1" type="module"></script>
 </body>
+
 </html>
